<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Dim Color Button -->
    <Button
        android:id="@+id/btnDim"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="toggleDimParam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Kill Bluetooth on Device Button -->
    <Button
        android:id="@+id/btnDisconnectAndKill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FF0000"
        android:text="@string/btnDiscAndKill"
        android:onClick="stopAdvBtnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Animation Mode -->
    <TextView
        android:id="@+id/activeModeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/activeModeTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDisconnectAndKill" />

    <LinearLayout
        android:id="@+id/llAnimMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activeModeTitle"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/activeModeTitle">

        <ToggleButton
            android:id="@+id/btnBasicAnimMode"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnBasicMode"
            android:textOff="@string/btnBasicMode"
            android:textOn="@string/btnBasicMode" />

        <ToggleButton
            android:id="@+id/btnAudioBasedMode"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnAudioMode"
            android:textOff="@string/btnAudioMode"
            android:textOn="@string/btnAudioMode" />
    </LinearLayout>

    <!-- Led Animation Direction -->
    <TextView
        android:id="@+id/directionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/directionTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llAnimMode" />

    <LinearLayout
        android:id="@+id/llLedDirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activeModeTitle"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/directionTitle">

        <ToggleButton
            android:id="@+id/btnDirUp"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:text="@string/btnDirUp"
            android:textOff="@string/btnDirUp"
            android:textOn="@string/btnDirUp" />

        <ToggleButton
            android:id="@+id/btnDirDown"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:text="@string/btnDirDown"
            android:textOff="@string/btnDirDown"
            android:textOn="@string/btnDirDown" />

        <ToggleButton
            android:id="@+id/btnDirLeft"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:text="@string/btnDirLeft"
            android:textOff="@string/btnDirLeft"
            android:textOn="@string/btnDirLeft" />

        <ToggleButton
            android:id="@+id/btnDirRight"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:text="@string/btnDirRight"
            android:textOff="@string/btnDirRight"
            android:textOn="@string/btnDirRight" />

        <ToggleButton
            android:id="@+id/btnDirYCenterOut"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:text="@string/btnDirYCenterOut"
            android:textOff="@string/btnDirYCenterOut"
            android:textOn="@string/btnDirYCenterOut" />

        <ToggleButton
            android:id="@+id/btnDirYOutCenter"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:text="@string/btnDirYOutCenter"
            android:textOff="@string/btnDirYOutCenter"
            android:textOn="@string/btnDirYOutCenter" />
    </LinearLayout>

    <!-- Stagger -->
    <TextView
        android:id="@+id/staggerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/staggerTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLedDirection" />

    <LinearLayout
        android:id="@+id/llStagger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activeModeTitle"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/staggerTitle">

        <ToggleButton
            android:id="@+id/btnStagNone"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:text="@string/btnStagNone"
            android:textOff="@string/btnStagNone"
            android:textOn="@string/btnStagNone" />

        <ToggleButton
            android:id="@+id/btnStagAsc"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:text="@string/btnStagAsc"
            android:textOff="@string/btnStagAsc"
            android:textOn="@string/btnStagAsc" />

        <ToggleButton
            android:id="@+id/btnStagDesc"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:text="@string/btnStagDesc"
            android:textOff="@string/btnStagDesc"
            android:textOn="@string/btnStagDesc" />

        <ToggleButton
            android:id="@+id/btnStagMnt"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:text="@string/btnStagMnt"
            android:textOff="@string/btnStagMnt"
            android:textOn="@string/btnStagMnt" />

        <ToggleButton
            android:id="@+id/btnStagVal"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:text="@string/btnStagVal"
            android:textOff="@string/btnStagVal"
            android:textOn="@string/btnStagVal" />
    </LinearLayout>

    <!-- Color -->
    <TextView
        android:id="@+id/colorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/colorTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llStagger" />

    <LinearLayout
        android:id="@+id/llColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activeModeTitle"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/colorTitle">

        <ToggleButton
            android:id="@+id/btnColor0"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:backgroundTint="#80FF9800"
            android:backgroundTintMode="src_over"
            android:onClick="colorSelected"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/btnColor1"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:backgroundTint="#80E91E63"
            android:backgroundTintMode="src_over"
            android:onClick="colorSelected"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/btnColor2"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:backgroundTint="#80673AB7"
            android:backgroundTintMode="src_over"
            android:onClick="colorSelected"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/btnColor3"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:backgroundTint="#8003A9F4"
            android:backgroundTintMode="src_over"
            android:onClick="colorSelected"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/btnColor4"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:backgroundTint="#80009688"
            android:backgroundTintMode="src_over"
            android:onClick="colorSelected"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/btnColor5"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:backgroundTint="#804CAF50"
            android:backgroundTintMode="src_over"
            android:onClick="colorSelected"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <!-- Custom Color -->
    <LinearLayout
        android:id="@+id/llCustColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/llColor"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="0dp"
        app:layout_constraintTop_toBottomOf="@+id/llColor">

        <TextView
            android:id="@+id/btnCustColor0"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/btnCustColor1"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/btnCustColor2"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/btnCustColor3"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/btnCustColor4"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCustColorUpdate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/llColor"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintTop_toBottomOf="@+id/llCustColor">

        <Button
            android:id="@+id/btnUpdateCustColor0"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="updateCustomColor" />

        <Button
            android:id="@+id/btnUpdateCustColor1"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="updateCustomColor"/>

        <Button
            android:id="@+id/btnUpdateCustColor2"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="updateCustomColor"/>

        <Button
            android:id="@+id/btnUpdateCustColor3"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="updateCustomColor"/>

        <Button
            android:id="@+id/btnUpdateCustColor4"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="updateCustomColor"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>